app/assets/stylesheets/reports.scss
// Place all the styles related to the reports controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.stat-panel {
    background-color: #EFEFEF;
    width: 170px;
    height: 170px;
    text-align: center;
    display: inline-block;
    margin: 5px;
}

.stat-panel > .panel-heading {
    background-color: inherit;
    border: none;
    font-weight: bold;
    padding-top: 20px;
    height: 30%;
}

.stat-panel > .panel-body {
    font-size: 50px;
    //padding-top: 0px;
    //padding-bottom: 0px;
    height: 70%;
}

span.stat {
    vertical-align: middle;
}

div.collapsible {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    width: 15em;
}

div.collapsible:hover {
    overflow: visible;
    text-overflow: inherit;
}

div.collapsible > span {
    background-color: white;
    position: relative;
}

div.collapsible:hover > span {
    -moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
    -webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
    box-shadow: 1px 2px 3px rgba(0,0,0,.5);
}

table {
    width: 100%;
}

